--- a/main.html
+++ b/main.html
@@ -7,9 +7,25 @@
 </head>
 
 <body>
+	<form action="" method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" minlength="3", maxlength="50", required>
+		<br>
+		
+		<label for="portfolio">URL</label>
+		<input type="url" id="portfolio" required>
+		<br>
+		
+		<label for="favColor">color</label>
+		<input type="color" id="favColor">
+		<br>
+		
+		<label for="likeness">Range</label>
+		<input type="range" id="likeness" min="1" max="100">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	</form>
 
 </body>
 
