--- a/main.html
+++ b/main.html
@@ -12,15 +12,15 @@
 		<input type="text" id="name" minlength="3", maxlength="50", required>
 		<br>
 		
-		<label for="portfolio">URL</label>
+		<label for="portfolio">Portfolio</label>
 		<input type="url" id="portfolio" required>
 		<br>
 		
-		<label for="favColor">color</label>
+		<label for="favColor">favColor</label>
 		<input type="color" id="favColor">
 		<br>
 		
-		<label for="likeness">Range</label>
+		<label for="likeness">Likeness</label>
 		<input type="range" id="likeness" min="1" max="100">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
