--- a/main.html
+++ b/main.html
@@ -8,20 +8,20 @@
 
 <body>
 	<form action="" method="post">
-		<label for="name">Name</label>
-		<input type="text" id="name" minlength="3", maxlength="50", required>
+		<label for="name">Name:</label>
+		<input type="text" id="name" minlength="3" maxlength="50" required>
 		<br>
 		
-		<label for="portfolio">Portfolio</label>
+		<label for="portfolio">Portfolio:</label>
 		<input type="url" id="portfolio" required>
 		<br>
 		
-		<label for="favColor">favColor</label>
-		<input type="color" id="favColor">
+		<label for="favColor">Favorite Color</label>
+		<input type="color" id="favColor" required>
 		<br>
 		
 		<label for="likeness">Likeness</label>
-		<input type="range" id="likeness" min="1" max="100">
+		<input type="range" id="likeness" min="1" max="100" required>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
