--- a/main.html
+++ b/main.html
@@ -4,10 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Feedback Form</title>
 </head>
 
 <body>
-	<form action="" method="post">
+	<form action="/submit" method="POST">
 		<label for="name">Name:</label>
 		<input type="text" id="name" minlength="3" maxlength="50" required>
 		<br>
@@ -16,12 +17,15 @@
 		<input type="url" id="portfolio" required>
 		<br>
 		
-		<label for="favColor">Favorite Color</label>
+		<label for="favColor">Favorite Color:</label>
 		<input type="color" id="favColor" required>
 		<br>
 		
-		<label for="likeness">Likeness</label>
+		<label for="likeness">Likeness:</label>
 		<input type="range" id="likeness" min="1" max="100" required>
+		<br>
+
+		<button type="submit">Submit</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
