--- a/main.html
+++ b/main.html
@@ -8,21 +8,21 @@
 </head>
 
 <body>
-	<form action="/submit" method="POST">
+	<form action="/submit" method="post">
 		<label for="name">Name:</label>
-		<input type="text" id="name" minlength="3" maxlength="50" required>
+		<input type="text" id="name" name="name" minlength="3" maxlength="50" required>
 		<br>
 		
 		<label for="portfolio">Portfolio:</label>
-		<input type="url" id="portfolio" required>
+		<input type="url" id="portfolio" name="portfolio" required>
 		<br>
 		
 		<label for="favColor">Favorite Color:</label>
-		<input type="color" id="favColor" required>
+		<input type="color" id="favColor" name="favColor" required>
 		<br>
 		
 		<label for="likeness">Likeness:</label>
-		<input type="range" id="likeness" min="1" max="100" required>
+		<input type="range" id="likeness" name="likeness" min="1" max="100" required>
 		<br>
 
 		<button type="submit">Submit</button>
