--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<h1>Feedback Form</h1>
 	<form action="/submit" method="post">
 		<label for="name">Name:</label>
 		<input type="text" id="name" name="name" minlength="3" maxlength="50" required>
@@ -18,10 +19,10 @@
 		<br>
 		
 		<label for="favColor">Favorite Color:</label>
-		<input type="color" id="favColor" name="favColor" required>
+		<input type="color" id="favColor" name="favColor" N/A>
 		<br>
 		
-		<label for="likeness">Likeness:</label>
+		<label for="likeness">Likeness (1-100):</label>
 		<input type="range" id="likeness" name="likeness" min="1" max="100" required>
 		<br>
 
